drm/i915: Don't try to handle GuC when GuC is not supported.

Avoid any kind of GuC handling if GuC is not supported
on a giving platform.

Besides being useless handling, our driver needs
to be smarter than the user trying to use an invalid paramenter.

Cc: Jani Nikula <jani.nikula@intel.com>
Cc: Anusha Srivatsa <anusha.srivatsa@intel.com>
Cc: Christophe Prigent <christophe.prigent@intel.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=97573
Signed-off-by: Rodrigo Vivi <rodrigo.vivi@intel.com>